--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <html>
 <body>
-
+<meta name="viewport" content="initial-scale=1">
 <h2>The Cat Feeder</h2>
 <!--<a href="#"-->
 <button	class="btn btn-block btn-lg btn-success" id="button"><span class="glyphicon glyphicon-download-alt"></span> Feed the Kitties</button>
