Add range slider for feed times

--- a/index.html
+++ b/index.html
@@ -8,29 +8,114 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<!--Needed for slider-->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/dot-luv/jquery-ui.css">
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js" type="text/javascript"></script>
+
 </head>
 <html>
 <body>
+<meta charset="utf-8"/>
 <meta name="viewport" content="initial-scale=1">
-<h2>The Cat Feeder</h2>
-<!--<a href="#"-->
-<button	class="btn btn-block btn-lg btn-success" id="button"><span class="glyphicon glyphicon-download-alt"></span> Feed the Kitties</button>
 
+<h2>The Cat Feeder</h2>
+
+<!--Button to Feed Cats-->
+<button	class="btn btn-block btn-lg btn-success" id="button"><span class="glyphicon glyphicon-download-alt"></span> Feed the Kitties</button>
 <p></p>
+
+<!--Slider to Schedule Feeding Time-->
+<style>
+    #slider-range,#SlideMax{width:400px;}
+    #slider-range,#time, #SlideMax, table{margin:10px;display:block;}
+</style>
+<div id="slider-range"></div>
+<span id="SlideMax"></span>
+<br />
+<span id="time"></span>
+<input type="submit" name="scheduleSubmit" value="Submit" id="scheduleSubmit" class="ui-button ui-state-default ui-corner-all"/>
+<table id="Schedule">
+    <thead>
+        <tr>
+            <th>Start Time</th>
+            <th>End Time</th>
+            </tr>
+    </thead>
+    <tbody>
+    </tbody>
+</table>
+
+
 <script type="text/javascript">
     $(document).ready(function(){
-	 //$("button").click(function(){
 	    $("button").on('click', function(){
 	    $.ajax({
                type: 'POSTi',
                url: 'exec.php',
                success: function(data) {
-                  //alert(data);
                   $("p").text(data);
                }
             });
        });
    });
+
+var startTime;
+var endTime;
+$("#slider-range").slider({
+    range: true, min: 0, max: 2879, values: [540, 1020], step:5, slide: slideTime
+});
+
+function slideTime(event, ui){
+    var val0 = $("#slider-range").slider("values", 0),
+        val1 = $("#slider-range").slider("values", 1),
+        minutes0 = parseInt(val0 % 60, 10),
+        hours0 = parseInt(val0 / 60 % 24, 10),
+        minutes1 = parseInt(val1 % 60, 10),
+        hours1 = parseInt(val1 / 60 % 24, 10);
+    startTime = getTime(hours0, minutes0);
+    endTime = getTime(hours1, minutes1);
+    $("#time").text(startTime + ' - ' + endTime);
+}
+function getTime(hours, minutes) {
+    var time = null;
+    //~ $.ajax({
+		//~ type: 'GET',
+        //~ url: 'get_times.php',
+        //~ success: function(startTime) {
+			//~ alert(startTime);
+            //~ $("p").text(startTime);
+        //~ }
+    //~ });
+    
+    minutes = minutes + "";
+    if (hours < 12) {time = "AM";}
+    else {  time = "PM";}
+    if (hours == 0) {hours = 12;}
+    if (hours > 12) {hours = hours - 12; }
+    if (minutes.length == 1) {minutes = "0" + minutes;}
+    return hours + ":" + minutes + " " + time;
+}
+
+$("#scheduleSubmit").on('click', function(){
+    console.log(startTime);
+    console.log(endTime);
+    $('#Schedule tbody').append('<tr>' +
+        '<td>' + startTime + '</td>' +
+        '<td>' + endTime + '</td>' +
+        '</tr>');
+    $.ajax({
+		type: 'POST',
+        url: 'exec.php',
+        success: function(startTime) {
+			alert(data);
+            $("p").text(startTime);
+        }
+    });
+});
+slideTime();
+
 </script>
 </body>
 </html>
